--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,17 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
+- id: 'Print ENV'
+  name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+      echo "--- ENVIRONMENT VARIABLES ---"
+      env
+      echo "--- HOME is: $HOME ---"
+      echo "--- Working Directory: $(pwd) ---"
+
 - id: 'Fetch Service Account Key'
   name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
   entrypoint: 'bash'
@@ -18,6 +29,7 @@ steps:
   args:
     - -c
     - |
+      echo "Starting Terraform Init in $(pwd)"
       terraform init -backend-config="bucket=your-state-bucket" \
                      -backend-config="prefix=terraform/state/dev"
 
@@ -28,6 +40,7 @@ steps:
   args:
     - -c
     - |
+      echo "Starting Terraform Apply in $(pwd)"
       terraform apply -var-file=../environments/dev/terraform.tfvars \
                       -var="credentials=$HOME/service-account-key.json" \
                       -auto-approve
